--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "pannellum-react": "^1.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -14,6 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "tour": "file:",
+    "vite": "^5.2.13",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
