--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3004
-REACT_APP_BACKEND_URI='http://93.127.185.153:3000/virtual-tour/some-unique-id'
+REACT_APP_BACKEND_URI='http://93.127.185.153:3000/virtual-tour'
