--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3004
-REACT_APP_BACKEND_URI='http://techlambda.com:3000/virtual-tour'
+REACT_APP_BACKEND_URI='https://techlambda.com:3001/virtual-tour'
